--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 <!-- badges: end -->
 
-Access drug names based on RxNorm CUI from the National Library of Medicine RxNorm RESTful API.
+> Access drug names based on RxNorm CUI from the National Library of Medicine RxNorm RESTful API.
 
 ## Installation
 
