--- a/README.Rmd
+++ b/README.Rmd
@@ -35,30 +35,34 @@ devtools::install_github("nt-williams/rxnorm")
 
 ## Example
 
+```{r}
+library(rxnorm)
+```
+
 Query the API for the RxNorm name:
 
 ```{r}
-rxnorm::get_rx(1011485)
+get_rx(1011485)
 ```
 
 Query the API for the brand name:
 
 ```{r}
-rxnorm::get_bn(1011485)
+get_bn(1011485)
 ```
 
 Query the API for the [WHO ATC](https://www.whocc.no/atc_ddd_index/) drug class:
 
 ```{r}
-rxnorm::get_atc(1011485)
+get_atc(1011485)
 ```
 
 We can further parse ATC codes to varying levels of specificy:
 
 ```{r}
-rxnorm::get_atc(1011485, "first")
-rxnorm::get_atc(1011485, "second")
-rxnorm::get_atc(1011485, "third")
-rxnorm::get_atc(1011485, "fourth")
+get_atc(1011485, "first")
+get_atc(1011485, "second")
+get_atc(1011485, "third")
+get_atc(1011485, "fourth")
 ```
 
